--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,11 +6,37 @@
   <title>{% block title %}{% endblock %}</title>
   <!-- Bootstrap-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/sticky-navbar-footer.css') }}">
   <!-- Custom CSS-->
   {% block customcss %}
   {% endblock %}
 </head>
 <body>
+  <header>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a href="{{ url_for('index') }}" >
+        <img class="mb-4" src="{{ url_for('static', filename='img/siloin.png')}}" alt="" width="100px" height="100px">
+      </a>  
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+        {% if session['name'] %}
+          <a href="{{ url_for('logout') }}">log out</a></p>
+        {% else %}
+          <a href="{{ url_for('login') }}">log in</a>
+        {% endif %}
+      </div>
+    </nav>
+  </header>
+
+
   <!-- flashed messages -->
   {% with messages = get_flashed_messages() %}
   {% if messages %}
@@ -25,7 +51,14 @@
 
   {% block body %}
   {% endblock %}
-  
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <span class="text-muted">Siloin 2023</span>
+    </div>
+  </footer>
+
   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
